--- a/.gitignore
+++ b/.gitignore
@@ -32,6 +32,14 @@ yarn-error.log*
 
 # env files (can opt-in for committing if needed)
 .env*
+.env.local
+.env.development.local
+.env.test.local
+.env.production.local
+
+# Sensitive configuration files
+config/secrets.json
+config/database.json
 
 # vercel
 .vercel
